chore: dark mode fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ button {
 
 main {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   //justify-content: center;
   //align-items: center;
   flex-direction: column;
